testdata/baselines/reference/submodule/compiler/moduleMemberWithoutTypeAnnotation2.errors.txt
moduleMemberWithoutTypeAnnotation2.ts(12,34): error TS2339: Property 'Alert' does not exist on type 'never'.


==== moduleMemberWithoutTypeAnnotation2.ts (1 errors) ====
    module TypeScript {
        export module CompilerDiagnostics {
    
            export interface IDiagnosticWriter {
                Alert(output: string): void;
            }
    
            export var diagnosticWriter = null;
    
            export function Alert(output: string) {
                if (diagnosticWriter) {
                    diagnosticWriter.Alert(output);
                                     ~~~~~
!!! error TS2339: Property 'Alert' does not exist on type 'never'.
                }
            }
        }
    }
    